TestSuite/errors/err0012.pas
procedure Test;
begin
end;

function Func : integer;
begin
end;

var a : integer;
begin
a := @Func;
end.